fixed z-index

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,4 @@
 .App {
   text-align: center;
+  z-index: -1;
 }
