--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,7 @@
   position: sticky;
   top: 0;
   border: 3px solid #CCD744;
+  z-index: 1;
 }
 
 .App-title {
