--- a/src/components/PizzaListItem/PizzaListItem.css
+++ b/src/components/PizzaListItem/PizzaListItem.css
@@ -1,15 +1,24 @@
 .za-item-container {
     border: 2px solid #FF0024;
     border-radius: 2px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     transition: all 0.3s ease-in-out;
     background-color: #fff;
+    user-select: none;
 }
 
 .za-item-container:hover {
-    z-index: 1;
+    z-index: 0;
     transition: all 0.3s ease-in-out;
     transform: scale(1.1);
+}
+
+.za-item-container button {
+    height: 20px;
+    width: 100%;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
 .za-content-container {
@@ -49,8 +58,3 @@ hr {
     padding-right: 5px;
 }
 
-button {
-    width: 100%;
-    outline: none;
-    border: none;
-}
